Fix non-detection of end of $() construct in sh.lang

--- a/src/data/def/sh.lang
+++ b/src/data/def/sh.lang
@@ -204,7 +204,7 @@
 			start = '(?=[^|&;()<> \t])'
 			%highlight { use = "sh-shell-nokeyword" }
 			%highlight { use = "sh-carry-over-line" }
-			end = '[<>]\('
+			end = '[<>]\(|(?=\))'
 		}
 	}
 
