Fix escape output style for additions; fix diff to recognize more complex diff output

--- a/src/data/diff.lang
+++ b/src/data/diff.lang
@@ -41,7 +41,7 @@ format = 1
 			%highlight {
 				start = '^\+{3} .*'
 				%highlight {
-					regex = '^@@.*@@$'
+					regex = '^@@.*@@.*'
 					style = "keyword"
 				}
 				%highlight {
