--- a/src/data/def/cxx.lang
+++ b/src/data/def/cxx.lang
@@ -8,7 +8,7 @@
 				'const_cast|const|continue|decltype|default|delete|double|' +
 				'dynamic_cast|else|enum|explicit|export|extern|false|float|for|' +
 				'friend|goto|if|inline|int|long|mutable|namespace|new|noexcept|' +
-				'not_eq|not|nullptr|operator|or_eq|or|private|protected|public|' +
+				'not_eq|not|nullptr|operator|or_eq|or|override|private|protected|public|' +
 				'register|reinterpret_cast|return|short|signed|sizeof|static_assert|' +
 				'static_cast|static|struct|switch|template|this|thread_local|throw|' +
 				'true|try|typedef|typeid|typename|union|unsigned|using|virtual|void|' +
