Fixed highlighting of keywords after a line continuation in shell scripts

--- a/src/data/def/sh.lang
+++ b/src/data/def/sh.lang
@@ -206,6 +206,7 @@
 			%highlight { use = "sh-carry-over-line" }
 			end = '[<>]\(|(?=\))'
 		}
+		%highlight { use = "sh-carry-over-line" }
 	}
 
 	sh-word {
