--- a/src/data/def/c-base.lang
+++ b/src/data/def/c-base.lang
@@ -26,7 +26,7 @@
 			'manonly|memberof|msc|name|namespace|nosubgrouping|note|n|overload|' +
 			'package|page|paragraph|param|par|post|pre|private|privatesection|' +
 			'property|protectedsection|protected|protocol|publicsection|public|' +
-			'p|ref|relatesalso|relates|remarks|return|retval|sa|section|see|' +
+			'p|ref|relatesalso|relates|remarks|returns?|retval|sa|section|see|' +
 			'showinitializer|since|skipline|skip|struct|subpage|subsection|' +
 			'subsubsection|test|throw|todo|tparam|typedef|union|until|var|' +
 			'verbatim|verbinclude|version|warning|weakgroup|xmlonly|xrefitem)(?!\w)'
