Don't highlight C-preprocessor directive text. Doing so leads to weird highlighting of keywords in e.g. error and warning texts.

--- a/src/data/def/c-base.lang
+++ b/src/data/def/c-base.lang
@@ -134,8 +134,9 @@
 		}
 		# Generic preprocessor directive
 		%highlight {
-			regex = '^\s*#\s*\w*'
-			style = "misc"
+			start = '^\s*#\s*\w*'
+			end = '(?<!\\)$'
+			delim-style = "misc"
 		}
 
 		# Integer constants
