Improve perl variable highlighting

--- a/src/data/def/perl.lang
+++ b/src/data/def/perl.lang
@@ -123,7 +123,13 @@
 		}
 
 		%highlight {
-			regex = "(?:\$#?|@|%|\*)(?:[a-zA-Z_]\w*(?:(?:::|')[a-zA-Z_]\w*)*|[^\s\w^]|\^_\w+|\^[^\s]|\{\^\w+\})"
+			regex = "(?:\$#?|@|%|\*)(?:[a-zA-Z_]\w*(?:(?:(?:::)+|(?:::)*'+)[a-zA-Z_]\w*)*|' +
+				'(?:(?:(?:::)+|(?:::)*'+)[a-zA-Z_]\w*)+|[^\s\w^{]|\^_\w+|\^[^\s])"
+			style = "variable"
+		}
+		%highlight {
+			start = "(?:\$#?|@|%|\*)\{"
+			end = "\}"
 			style = "variable"
 		}
 
