--- a/src/data/def/make.lang
+++ b/src/data/def/make.lang
@@ -1,4 +1,6 @@
 %define {
+	style-scope = "make"
+
 	make-functions {
 		%highlight {
 			regex = '(?<=\$[{(])(?:patsubst|subst|strip|findstring|filter(?:-out)|' +
