--- a/src/data/def/php.lang
+++ b/src/data/def/php.lang
@@ -1,4 +1,6 @@
 %define {
+	style-scope = "php"
+
 	php-string-escape {
 		%highlight {
 			regex = '\\(?:[nrtvef\$"]|[0-7]{1,3}|x[0-9A-Fa-f]{1,2}|u\{[0-9a-f]{1,6}\})'
