--- a/src/data/lang.lang
+++ b/src/data/lang.lang
@@ -1,26 +1,35 @@
-format = 1
+format = 3
 
 %include = "def/generic.lang"
-%highlight { use = "hash-comment" }
 
-%highlight {
-	regex = '(?<![\w-])(?:%include|%highlight|%define|start|end|regex|use|style|' +
-		'delim-style|nested|%on-entry|exit|extract|true|false|yes|no|format|name)(?![\w-])'
-	style = "keyword"
+%define {
+  style-scope = "lang"
+
+  lang {
+    %highlight { use = "hash-comment" }
+
+    %highlight {
+    	regex = '(?<![\w-])(?:%include|%highlight|%define|start|end|regex|use|style|' +
+    		'delim-style|nested|%on-entry|exit|extract|true|false|yes|no|format|name)(?![\w-])'
+    	style = "keyword"
+    }
+    %highlight {
+    	start = '"'
+    	%highlight {
+    		regex = '""'
+    	}
+    	end = '"|$'
+    	style = "string"
+    }
+    %highlight {
+    	start = "'"
+    	%highlight {
+    		regex = "''"
+    	}
+    	end = "'|$"
+    	style = "string"
+    }
+  }
 }
-%highlight {
-	start = '"'
-	%highlight {
-		regex = '""'
-	}
-	end = '"|$'
-	style = "string"
-}
-%highlight {
-	start = "'"
-	%highlight {
-		regex = "''"
-	}
-	end = "'|$"
-	style = "string"
-}
+
+%highlight { use = "lang" }
