--- a/src/data/def/java.lang
+++ b/src/data/def/java.lang
@@ -1,4 +1,6 @@
 %define {
+	style-scope = "java"
+
 	java-escape {
 		%highlight {
 			regex = '\\(?:u[0-9a-fA-F]{4}|[0-3][0-7]{2}|[0-7]{1,2}|[btnfr"''\\])'
