Update the CSS language definition to prevent unwanted recognition of element names in ID and class selectors
Fixes gphalkes/tilde#66

--- a/src/data/def/css.lang
+++ b/src/data/def/css.lang
@@ -93,6 +93,11 @@
 
 		%highlight { use = "css-elements" }
 
+    # Prevent ID and class selectors from being recognized as something else.
+    %highlight {
+      regex = "[#.]-?[_a-z\240-\377-][_a-z\d\240-\377-]*"
+    }
+
 		%highlight {
 			start = '{'
 			%highlight {
